# hskit-rust

./: README.md
api/: .gitignore  Cargo.toml  rustfmt.toml
api/src/db/: mod.rs
api/src/db/enums/: episode.rs
api/src/db/models/: character.rs  module.rs
